[package]
name = "save_pq_onepage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1.38", features = ["full"] }
reqwest      = { version = "0.12", features = ["json","gzip"] }
serde        = { version = "1.0", features = ["derive"] }
futures      = "0.3"
async-stream = "0.3"
anyhow       = "1.0"
arrow2       = { version = "0.18", features = ["io_parquet", "io_parquet_compression"] }
serde_json = "1.0.140"
